# semantic-file-finder

./: .gitignore  CLAUDE.md  PRD-semantic-file-search.md  README.md  index.html  package.json
experiments/embedding-search-quality/: Dockerfile  README.md  create_test_docs.py  requirements.txt  test_embedding_search.py
experiments/image-understanding/: Dockerfile  README.md  create_test_files.py  docker-compose.yml  requirements.txt  test_image_understanding.py
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_init.rs  commands.rs  config.rs  converter.rs  crawler.rs  db.rs  error.rs  gemini.rs  keychain.rs  lib.rs  logging.rs  main.rs  pipeline.rs  platform.rs  search.rs  tantivy_index.rs  tray.rs  vector_search.rs  watcher.rs
src-tauri/tests/: cli_integration.rs
src/components/: ResultList.tsx  SearchBar.tsx  Settings.tsx
