[package]
name = "semantic-file-search"
version = "0.1.0"
description = "A desktop application that searches local files using natural language"
edition = "2024"
rust-version = "1.90"

[lib]
name = "semantic_file_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "semantic-file-search"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rusqlite = { version = "0.34", features = ["bundled"] }
anytomd = "0.10"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tantivy = "0.25"
lindera = { version = "2", features = ["embed-ko-dic"] }
lindera-tantivy = { version = "2", features = ["embed-ko-dic"] }
blake3 = "1"
walkdir = "2"
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
